# PNRR-AI-TRAINER-NOTIFIER

./: .env.example  .gitignore  GUIDE.md  README.md  monitor_history.sqlite3  pyproject.toml  run_log.txt  run_monitor.py
.claude/: settings.local.json
.github/workflows/: daily-monitor.yml  hourly-monitor.yml
data/: projects_funded.csv  projects_sample.csv
scripts/: extract_ministry_pdf.py  migrate_sqlite_to_postgres.py
src/pnrr_ai_monitor/: alerts.py  cli.py  config.py  crawler.py  deadline_parser.py  document_reader.py  http_client.py  logging_utils.py  mapping.py  models.py  monitor.py  repository.py  search.py  state.py  thread_matching.py  verifier.py
src/pnrr_ai_monitor/adapters/: __init__.py  argo.py  base.py  generic.py  nuvola.py  search.py  spaggiari.py
