[project]
name = "pnrr-ai-monitor-poc"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "google-genai>=2.10.0",
    "pdfplumber>=0.11.10",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "psycopg[binary]>=3.2.0",
    "requests>=2.34.2",
    "python-docx>=1.2.0",
]
